--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <script> document.write(new Date().toLocaleDateString()); </script>
+
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
@@ -174,14 +175,12 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Thank you for visiting!</a>
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
-          <a href="#"><span class="icofont-behance"></span></a>
+          <a href="#"><span class="icofont-github"></span></a>
+          <a href="#"><span class="icofont-linkedin"></span></a>
         </div>
       </div>
     </div>
